--- a/.gitconfig
+++ b/.gitconfig
@@ -30,3 +30,12 @@
 	assumed = !git ls-files -v | grep ^h | cut -c 3-
 	delete-merged-remote-branches = !git branch -a --merged | grep -vE \"master|develop\" | sed -e \"s% *remotes/origin/%%\" | xargs -I% git push origin :%
 	delete-merged-branches = !git branch --merged | grep -vE \"master|develop\"  | xargs -I % git branch -d %
+[difftool "sourcetree"]
+	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$LOCAL\" \"$REMOTE\"
+	path =
+[mergetool "sourcetree"]
+	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$BASE\" \"$LOCAL\" \"$REMOTE\" \"$MERGED\"
+	trustExitCode = true
+[user]
+	name = wate
+	email = pc.poisoning@gmail.com
