--- a/textlint/package.json
+++ b/textlint/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "textlint": "^10.*",
     "textlint-rule-no-nfd": "^1.*",
-    "textlint-rule-preset-ja-technical-writing": "^3.*"
+    "textlint-rule-preset-ja-technical-writing": "^3.1.0"
   },
   "author": "wate",
   "license": "MIT"
