--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
   editor = vim
   autocrlf = input
 	quotepath = False
-	excludesfile = /Users/wate/.gitignore
+	excludesfile = ~/.gitignore
   attributesfile = ~/.gitattributes
 	ignorecase = False
 [fetch]
@@ -43,7 +43,7 @@
 	delete-merged-branches = !git branch --merged | grep -vE \"master|develop\"  | xargs -I % git branch -d %
 [difftool "sourcetree"]
 	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [mergetool "sourcetree"]
 	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$BASE\" \"$LOCAL\" \"$REMOTE\" \"$MERGED\"
 	trustExitCode = true
