--- a/.gitconfig
+++ b/.gitconfig
@@ -46,6 +46,6 @@
 	path = 
 [mergetool "sourcetree"]
 	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$BASE\" \"$LOCAL\" \"$REMOTE\" \"$MERGED\"
-	trustExitCode = true
+	trustExitCode = True
 [commit]
 	template = ~/.stCommitMsg
