--- a/.gitconfig
+++ b/.gitconfig
@@ -41,6 +41,7 @@
 	assumed = !git ls-files -v | grep ^h | cut -c 3-
 	delete-merged-remote-branches = !git branch -a --merged | grep -vE \"master|develop\" | sed -e \"s% *remotes/origin/%%\" | xargs -I% git push origin :%
 	delete-merged-branches = !git branch --merged | grep -vE \"master|develop\"  | xargs -I % git branch -d %
+	pr = "!pr() { git fetch origin pull/$1/head:pr_$1 ;}; pr"
 [difftool "sourcetree"]
 	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$LOCAL\" \"$REMOTE\"
 	path = 
