--- a/.gitconfig
+++ b/.gitconfig
@@ -47,6 +47,6 @@
 	path = 
 [mergetool "sourcetree"]
 	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$BASE\" \"$LOCAL\" \"$REMOTE\" \"$MERGED\"
-	trustExitCode = True
+	trustExitCode = true
 [commit]
 	template = ~/.stCommitMsg
