--- a/textlint/package.json
+++ b/textlint/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "description": "my textlint rules",
   "dependencies": {
-    "textlint": "^10.*",
+    "textlint": "^11.*",
     "textlint-rule-no-nfd": "^1.*",
-    "textlint-rule-preset-ja-technical-writing": "^3.1.0"
+    "textlint-rule-preset-ja-technical-writing": "^3.*"
   },
   "author": "wate",
   "license": "MIT"
