--- a/setup_mac.yml
+++ b/setup_mac.yml
@@ -13,7 +13,7 @@
   tasks:
     - name: Update homebrew
       homebrew:
-        update_homebrew: yes
+        update_homebrew: true
     - name: Ensure git global setting
       git_config:
         scope: global
@@ -38,18 +38,18 @@
         - name: Ensure brew tap is installed
           homebrew_tap:
             name: "{{ item.name }}"
-            state: "{{ item.state|default('present') }}"
+            state: "{{ item.state | default('present') }}"
           with_items: "{{ homebrew_taps }}"
         - name: Ensure brew tap is installed(Homebrew)
           homebrew_tap:
             name: "{{ item.tap }}"
-            state: "{{ item.state|default('present') }}"
-          with_items: "{{ homebrew_packages|selectattr('tap', 'defined')|list }}"
+            state: "{{ item.state | default('present') }}"
+          with_items: "{{ homebrew_packages | selectattr('tap', 'defined') | list }}"
         - name: Ensure brew tap is installed(HomebrewCask)
           homebrew_tap:
             name: "{{ item.tap }}"
-            state: "{{ item.state|default('present') }}"
-          with_items: "{{ homebrew_cask_packages|selectattr('tap', 'defined')|list }}"
+            state: "{{ item.state | default('present') }}"
+          with_items: "{{ homebrew_cask_packages | selectattr('tap', 'defined') | list }}"
       tags:
         - brew
         - homebrew_tap
@@ -58,7 +58,7 @@
         - name: Ensure Homebrew packages is installed
           homebrew:
             name: "{{ item.name }}"
-            state: "{{ item.state|default('present') }}"
+            state: "{{ item.state | default('present') }}"
           with_items: "{{ homebrew_packages }}"
         - block:
             - name: Find terraform-provider-sakuracloud symlinks
@@ -77,12 +77,12 @@
                 paths: /usr/local/Cellar/terraform-provider-sakuracloud/
                 patterns: terraform-provider-sakuracloud_v*
                 file_type: file
-                recurse: yes
+                recurse: true
               register: find_binary_result
             - name: Create plugin symlink
               file:
                 src: "{{ item.path }}"
-                dest: ~/.terraform.d/plugins/{{ item.path|basename }}
+                dest: ~/.terraform.d/plugins/{{ item.path | basename }}
                 state: link
               with_items: "{{ find_binary_result.files }}"
           when: "'terraform-provider-sakuracloud' in homebrew_packages|map(attribute='name')|list"
@@ -90,33 +90,33 @@
           lineinfile:
             dest: ~/.bashrc
             line: '[ -f "${BREW_PREFIX}"/etc/bash_completion ] && source /usr/local/etc/bash_completion'
-          when: "'bash-completion' in homebrew_packages|map(attribute='name')|list"
+          when: "'bash-completion' in homebrew_packages | map(attribute='name') | list"
         - name: Ensure load bash completion file
           lineinfile:
             dest: ~/.bashrc
             line: '[ -f "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }} ] && source "${BREW_PREFIX}"/etc/bash_completion.d/{{ item.bash_completion }}'
-          with_items: "{{ homebrew_packages|selectattr('bash_completion', 'defined')|selectattr('state', 'undefined')|list }}"
+          with_items: "{{ homebrew_packages | selectattr('bash_completion', 'defined')|selectattr('state', 'undefined') | list }}"
         - name: Ensure rcfile setting
           blockinfile:
             create: true
             marker: "# {mark} {{ item.name }} ANSIBLE MANAGED BLOCK"
-            dest: "{{ item.rcfile.path|default('~/.bashrc') }}"
+            dest: "{{ item.rcfile.path | default('~/.bashrc') }}"
             block: "{{ item.rcfile.content }}"
-          with_items: "{{ homebrew_packages|selectattr('rcfile', 'defined')|selectattr('state', 'undefined')|list }}"
+          with_items: "{{ homebrew_packages | selectattr('rcfile', 'defined') | selectattr('state', 'undefined') | list }}"
         - name: Ensure brew package directory
           file:
             path: "{{ item.directory }}"
             state: directory
-          with_items: "{{ homebrew_packages|selectattr('directory', 'defined')|selectattr('state', 'undefined')|list }}"
+          with_items: "{{ homebrew_packages | selectattr('directory', 'defined')|selectattr('state', 'undefined') | list }}"
         - name: Ensure brew package symlink
           file:
             src: "{{ item.symlink.src }}"
             path: "{{ item.symlink.dest }}"
             state: link
-          with_items: "{{ homebrew_packages|selectattr('symlink', 'defined')|selectattr('state', 'undefined')|list }}"
+          with_items: "{{ homebrew_packages | selectattr('symlink', 'defined')|selectattr('state', 'undefined') | list }}"
         - name: Upgrade all homebrew packages
           homebrew:
-            upgrade_all: yes
+            upgrade_all: true
           when: brew_all_upgrade
         - name: Cleanup homebrew packages
           command: brew cleanup
@@ -129,7 +129,7 @@
         - name: Ensure Homebrew cask packages is installed
           homebrew_cask:
             name: "{{ item.name }}"
-            state: "{{ item.state|default('present') }}"
+            state: "{{ item.state | default('present') }}"
           with_items: "{{ homebrew_cask_packages }}"
         - name: check running virtual machine
           shell: vagrant global-status | grep "virtualbox running" | awk '{ print $1 }'
@@ -142,7 +142,7 @@
           with_items: "{{ result.stdout_lines if result is defined else [] }}"
         - name: Upgrade all homebrew cask packages
           homebrew_cask:
-            upgrade_all: yes
+            upgrade_all: true
           when: brew_cask_all_upgrade
         - name: Cleanup homebrew cask packages
           command: brew cleanup
@@ -167,8 +167,8 @@
             path: ~/.secret
             regexp: "^export {{ item.key }}=.*"
             line: 'export {{ item.key }}="{{ item.value }}"'
-            create: yes
-          with_dict: "{{ secret_env|default({}) }}"
+            create: true
+          with_dict: "{{ secret_env | default({}) }}"
       tags:
         - env
         - env_var
@@ -188,13 +188,13 @@
         - name: Ensure composer packages
           composer:
             command: require
-            global_command: yes
+            global_command: true
             arguments: "{{ item.name }}"
           with_items: "{{ composer_packages }}"
         - name: Update composer packages
           composer:
             command: update
-            global_command: yes
+            global_command: true
       tags:
         - composer
     - name: pip
@@ -213,9 +213,9 @@
         - name: Ensure gem packages
           gem:
             name: "{{ item.name }}"
-            user_install: no
-            state: "{{ item.state|default('latest') }}"
-            executable: "{{ '~/.rbenv/shims/gem' if 'rbenv' in homebrew_packages|map(attribute='name')|list else omit }}"
+            user_install: false
+            state: "{{ item.state | default('latest') }}"
+            executable: "{{ '~/.rbenv/shims/gem' if 'rbenv' in homebrew_packages|map(attribute='name') | list else omit }}"
           with_items: "{{ gem_packages }}"
           register: result
         - name: cleanup gem packages
@@ -227,11 +227,11 @@
         - name: Ensure npm packages
           npm:
             name: "{{ item.name }}"
-            global: yes
-            state: "{{ item.state|default('latest') }}"
-            executable: "{{ '~/.nodebrew/current/bin/npm' if 'nodebrew' in homebrew_packages|map(attribute='name')|list else omit }}"
+            global: true
+            state: "{{ item.state | default('latest') }}"
+            executable: "{{ '~/.nodebrew/current/bin/npm' if 'nodebrew' in homebrew_packages|map(attribute='name') | list else omit }}"
           with_items: "{{ npm_packages }}"
         - name: dump atom install packages
           shell: apm list --installed --bare>./atom-packages.txt
-          when: "'atom' in homebrew_cask_packages|map(attribute='name')|list"
+          when: "'atom' in homebrew_cask_packages | map(attribute='name') | list"
       tags: npm
