--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 	excludesfile = /Users/wate/.gitignore_global
   attributesfile = ~/.gitattributes
 [fetch]
-  prune = True
+	prune = true
 [pull]
   rebase = True
 [push]
