--- a/mac_vars.yml
+++ b/mac_vars.yml
@@ -159,6 +159,7 @@ homebrew_packages:
 homebrew_cask_packages:
   - name: karabiner-elements
   - name: atom
+  - name: google-cloud-sdk
   - name: vagrant
   - name: virtualbox
   - name: virtualbox-extension-pack
