--- a/mac_vars.yml
+++ b/mac_vars.yml
@@ -158,6 +158,7 @@ homebrew_packages:
 
 homebrew_cask_packages:
   - name: karabiner-elements
+  - name: launchy
   - name: atom
   - name: vagrant
   - name: virtualbox
