--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
 [pull]
 	rebase = true
 [push]
-  default = simple
+  default = current
 [filter "lfs"]
   smudge = git-lfs smudge -- %f
   process = git-lfs filter-process
