--- a/.gitconfig
+++ b/.gitconfig
@@ -38,6 +38,9 @@
 	assume = update-index --assume-unchanged
 	unassume = update-index --no-assume-unchanged
 	assumed = !git ls-files -v | grep ^h | cut -c 3-
+	skip-worktree = update-index --skip-worktree
+	unskip-worktree = update-index --no-skip-worktree
+	skipped-worktree = !git ls-files -v | grep ^s | cut -c 3-
 	delete-merged-remote-branches = !git branch -a --merged | grep -vE \"master|develop|staging|release\" | sed -e \"s% *remotes/origin/%%\" | xargs -I% git push origin :%
 	delete-merged-branches = !git branch --merged | grep -vE \"master|develop|staging|release\"  | xargs -I % git branch -d %
 	pr = "!pr() { git fetch origin pull/$1/head:pr_$1 ;}; pr"
