--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,8 @@
 [core]
   editor = vim
   autocrlf = input
-	quotepath = False
-	excludesfile = ~/.gitignore_global
+  quotepath = False
+  excludesfile = ~/.gitignore_global
   attributesfile = ~/.gitattributes
 [fetch]
 	prune = true
@@ -41,8 +41,8 @@
 	skip-worktree = update-index --skip-worktree
 	unskip-worktree = update-index --no-skip-worktree
 	skipped-worktree = !git ls-files -v | grep ^s | cut -c 3-
-	delete-merged-remote-branches = !git branch -a --merged | grep -vE \"master|develop|staging|release\" | sed -e \"s% *remotes/origin/%%\" | xargs -I% git push origin :%
-	delete-merged-branches = !git branch --merged | grep -vE \"master|develop|staging|release\"  | xargs -I % git branch -d %
+	delete-merged-remote-branches = !git branch -a --merged | grep -vE \"master|main|develop|staging|release\" | sed -e \"s% *remotes/origin/%%\" | xargs -I% git push origin :%
+	delete-merged-branches = !git branch --merged | grep -vE \"master|main|develop|staging|release\"  | xargs -I % git branch -d %
 	pr = "!pr() { git fetch origin pull/$1/head:pr_$1 ;}; pr"
 [difftool "sourcetree"]
 	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$LOCAL\" \"$REMOTE\"
