--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,8 @@
 [pull]
 	rebase = true
 [push]
-  default = current
+  default = simple
+	autoSetupRemote = true
 [filter "lfs"]
   smudge = git-lfs smudge -- %f
   process = git-lfs filter-process
